<resources>
    <string name="app_name">Ejercicio7</string>
    <string name="Guerrero">Guerrero</string>
    <string name="Mago">Mago</string>
    <string name="Arquero">Arquero</string>
    <string name="Ladron">Ladron</string>
    <string name="Aceptar">Aceptar</string>
    <string name="Orco">Orco</string>
    <string name="Elfo">Elfo</string>
    <string name="Humano">Humano</string>
    <string name="Enano">Enano</string>
    <string name="Seguir">Seguir</string>
    <string name="Volver">Volver a Empezar</string>
    <string name="Nombre">Nombre</string>
    <string name="Todo">Todo</string>
    <string name="todo">TODO</string>
    <string name="Dado">Dado</string>
    <string name="Expli">
        Comienza la aventura,
        pulsa el DADO para avanzar.
        CUIDADO puedes encontrarte enemigos
    </string>
    <string name="luchar">Luchar</string>
    <string name="huir">Huir</string>
    <string name="continuar">Continuar</string>
    <string name="recoger">Recoger</string>
    <string name="volver">Volver</string>
    <string name="entrar_a_la_ciudad">Entrar A la Ciudad</string>
    <string name="hablar">Hablar</string>
    <string name="comerciar">Comerciar</string>
    <string name="comprar">Comprar</string>
    <string name="vender">Vender</string>
    <string name="cancelar">Cancelar</string>
    <string name="menos">-</string>
    <string name="mas">+</string>
    <string name="hp_enemigo">HP Enemigo</string>
    <string name="_100_100">100/100</string>
    <string name="vida_jugador">Vida Jugador</string>
    <string name="objetos">objetos</string>
    <string name="atacar">Atacar</string>
    <string name="volver_a_empezar">Volver a empezar</string>
    <string name="entrar_a_n_ciudad">Entrar a \n Ciudad</string>
    <string name="te_queda_derrotar_5_enemigos">Te queda derrotar 5 enemigos</string>
    <string-array name="Objetos">
        <item> </item>
        <item>Espada</item>
        <item>Escudo</item>
        <item>Armadura</item>
        <item>Pocion de HP</item>
    </string-array>
</resources>