<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ejercicio10">

  <ImageView
      android:id="@+id/Valle"
      android:layout_width="416dp"
      android:layout_height="302dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.6"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0"
      tools:ignore="ImageContrastCheck"
      tools:src="@tools:sample/avatars"
      android:contentDescription="@string/todo" />

  <ImageButton
      android:id="@+id/Dado"
      android:layout_width="154dp"
      android:layout_height="118dp"
      android:contentDescription="@string/Dado"
      android:scaleType="fitCenter"
      android:src="@drawable/d6_dice"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/Valle"
      app:layout_constraintVertical_bias="0.054"
      tools:ignore="SpeakableTextPresentCheck" />

  <TextView
      android:id="@+id/Explicacion"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/Expli"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/Dado"
      app:layout_constraintVertical_bias="0.153" />

</androidx.constraintlayout.widget.ConstraintLayout>