<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Mercader">

    <ImageView
        android:id="@+id/Mercader"
        android:layout_width="402dp"
        android:layout_height="289dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.034"
        tools:srcCompat="@drawable/mercader" />

    <Button
        android:id="@+id/Comerciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comerciar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Volver"
        app:layout_constraintHorizontal_bias="0.268"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Mercader"
        app:layout_constraintVertical_bias="0.287" />

    <Button
        android:id="@+id/Volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continuar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Comerciar"
        app:layout_constraintTop_toBottomOf="@+id/Mercader"
        app:layout_constraintVertical_bias="0.286" />

    <Button
        android:id="@+id/Comprar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comprar"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Comerciar"
        app:layout_constraintVertical_bias="0.626" />

    <Button
        android:id="@+id/Vender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vender"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toEndOf="@+id/Comprar"
        app:layout_constraintTop_toBottomOf="@+id/Comerciar"
        app:layout_constraintVertical_bias="0.626" />

    <Button
        android:id="@+id/Cancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.353"
        app:layout_constraintStart_toEndOf="@+id/Vender"
        app:layout_constraintTop_toBottomOf="@+id/Volver"
        app:layout_constraintVertical_bias="0.626" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="311dp"
        android:layout_height="48dp"
        android:entries="@array/Objetos"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/Comerciar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Mercader"
        app:layout_constraintVertical_bias="0.587" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/Vender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Comerciar"
        app:layout_constraintVertical_bias="0.141" />

    <Button
        android:id="@+id/mas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        tools:layout_editor_absoluteX="69dp"
        tools:layout_editor_absoluteY="524dp" />
</androidx.constraintlayout.widget.ConstraintLayout>